Implement stub.* output and validation.

--- a/RM/3_1_0/notebooks/RefRange Examples.ipynb
+++ b/RM/3_1_0/notebooks/RefRange Examples.ipynb
@@ -112,15 +112,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "The lower and upper types must match",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-c7b569940d2c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mXdIntervalType\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"TCDR (mmol/L)\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDecimal\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minterval_units\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'mmol/L'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'https://en.wikipedia.org/wiki/Molar_concentration#Units/mmol/L'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m \u001b[0mi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupper\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m5.2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupper_included\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/DII/S3Model/RM/3_1_0/pylib/s3m_xdt.py\u001b[0m in \u001b[0;36mlower\u001b[0;34m(self, v)\u001b[0m\n\u001b[1;32m    564\u001b[0m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_lower\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    565\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 566\u001b[0;31m                     \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"The lower and upper types must match\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    567\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    568\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"The data type of \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\" must be a valid interval type not \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: The lower and upper types must match"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XdStringType : Concentration Units, ID: cjnrywgra0000pebi3itzblrs Published: True\n"
      ]
     }
    ],
@@ -137,39 +132,98 @@
     "u.enums = enums\n",
     "u.published = True\n",
     "\n",
+    "print(u)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XdQuantityType : Total Cholesterol, ID: cjnrywgrj0002pebidqqnq76o Published: False\n"
+     ]
+    }
+   ],
+   "source": [
     "# now the model\n",
     "d = XdQuantityType(\"Total Cholesterol\")\n",
     "d.docs = \"Record the concentration of cholesterol.\"\n",
     "d.definition_url = 'https://en.wikipedia.org/wiki/Cholesterol#Cholesterol_testing'\n",
     "d.units = u\n",
-    "\n",
     "d.min_inclusive = 0  # can't have a negative amount\n",
     "d.max_inclusive = 500  # this would clearly be out of range\n",
     "d.fraction_digits = 1 # limit the decimal places\n",
     "d.total_digits = 5\n",
     "\n",
-    "# define two reference ranges for the Desireable range\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XdIntervalType : TCDR (mmol/L), ID: cjnrywgrt0006pebi1xsr68ko Published: True\n",
+      "ReferenceRangeType : Total Cholesterol Desireable Range (mmol/L), ID: cjnrywgrt0004pebiyopp33t3 Published: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# define reference ranges and intervals for the Desireable range\n",
     "mmol = ReferenceRangeType(\"Total Cholesterol Desireable Range (mmol/L)\")\n",
     "mmol.definition_url = 'https://www.mayoclinic.org/tests-procedures/cholesterol-test/about/pac-20384601#desireable/mmol'\n",
     "mmol.is_normal = True # this is considered the normal/desired range\n",
+    "\n",
     "i = XdIntervalType(\"TCDR (mmol/L)\", Decimal)\n",
     "i.interval_units = ('mmol/L','https://en.wikipedia.org/wiki/Molar_concentration#Units/mmol/L')\n",
-    "i.lower = 0\n",
-    "i.upper = 5.2\n",
+    "i.definition_url = 'https://www.mayoclinic.org/tests-procedures/cholesterol-test/interval'\n",
+    "\n",
+    "# be sure to pass upper/lower as a string. It is coerced into the correct type upon assignment\n",
+    "i.lower = '0'\n",
+    "i.upper = '5.2'\n",
     "i.upper_included = False\n",
     "i.lower_included = False\n",
     "i.published = True\n",
+    "print(i)\n",
+    "\n",
     "mmol.interval = i\n",
     "mmol.published = True\n",
     "d.referenceranges = mmol\n",
     "\n",
+    "print(mmol)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ReferenceRangeType : Total Cholesterol Desireable Range (mg/dL), ID: cjnrywgs60008pebisetm6ilw Published: True\n"
+     ]
+    }
+   ],
+   "source": [
     "mg = ReferenceRangeType(\"Total Cholesterol Desireable Range (mg/dL)\")\n",
     "mg.definition_url = 'https://www.mayoclinic.org/tests-procedures/cholesterol-test/about/pac-20384601#desireable/mg'\n",
     "mg.is_normal = True # this is considered the normal/desired range\n",
     "i = XdIntervalType(\"TCDR (mg/dL)\", Decimal)\n",
     "i.interval_units = ('mg/dL','https://en.wikipedia.org/wiki/Molar_concentration#Units/mg/dL')\n",
-    "i.lower = 0\n",
-    "i.upper = 200\n",
+    "i.definition_url = 'https://www.mayoclinic.org/tests-procedures/cholesterol-test/interval'\n",
+    "\n",
+    "i.lower = '0'\n",
+    "i.upper = '200'\n",
     "i.upper_included = False\n",
     "i.lower_included = False\n",
     "i.published = True\n",
@@ -177,13 +231,33 @@
     "mg.published = True\n",
     "d.referenceranges = mg\n",
     "\n",
+    "\n",
+    "print(mg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ReferenceRangeType : Total Cholesterol Borderline high Range (mmol/L), ID: cjnrywgsh000cpebijg0wsyse Published: True\n"
+     ]
+    }
+   ],
+   "source": [
     "# define two reference ranges for the Borderline high range\n",
     "mmol = ReferenceRangeType(\"Total Cholesterol Borderline high Range (mmol/L)\")\n",
     "mmol.definition_url = 'https://www.mayoclinic.org/tests-procedures/cholesterol-test/about/pac-20384601#Borderlinehigh/mmol'\n",
     "i = XdIntervalType(\"TCBR (mmol/L)\", Decimal)\n",
     "i.interval_units = ('mmol/L','https://en.wikipedia.org/wiki/Molar_concentration#Units/mmol/L')\n",
-    "i.lower = 5.2\n",
-    "i.upper = 6.2\n",
+    "i.definition_url = 'https://www.mayoclinic.org/tests-procedures/cholesterol-test/interval'\n",
+    "\n",
+    "i.lower = '5.2'\n",
+    "i.upper = '6.2'\n",
     "i.upper_included = True\n",
     "i.lower_included = True\n",
     "i.published = True\n",
@@ -191,12 +265,33 @@
     "mmol.published = True\n",
     "d.referenceranges = mmol\n",
     "\n",
+    "\n",
+    "\n",
+    "print(mmol)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ReferenceRangeType : Total Cholesterol Borderline high Range (mg/dL), ID: cjnrywgst000gpebi1dfptfk2 Published: True\n"
+     ]
+    }
+   ],
+   "source": [
     "mg = ReferenceRangeType(\"Total Cholesterol Borderline high Range (mg/dL)\")\n",
     "mg.definition_url = 'https://www.mayoclinic.org/tests-procedures/cholesterol-test/about/pac-20384601#Borderlinehigh/mg'\n",
     "i = XdIntervalType(\"TCBR (mg/dL)\", Decimal)\n",
     "i.interval_units = ('mg/dL','https://en.wikipedia.org/wiki/Molar_concentration#Units/mg/dL')\n",
-    "i.lower = 200\n",
-    "i.upper = 239\n",
+    "i.definition_url = 'https://www.mayoclinic.org/tests-procedures/cholesterol-test/interval'\n",
+    "\n",
+    "i.lower = '200'\n",
+    "i.upper = '239'\n",
     "i.upper_included = True\n",
     "i.lower_included = True\n",
     "i.published = True\n",
@@ -204,12 +299,32 @@
     "mg.published = True\n",
     "d.referenceranges = mg\n",
     "\n",
+    "\n",
+    "print(mg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ReferenceRangeType : Total Cholesterol High Range (mmol/L), ID: cjnrywgt6000kpebiwm1l5uzv Published: True\n"
+     ]
+    }
+   ],
+   "source": [
     "# define two reference ranges for the High range\n",
     "mmol = ReferenceRangeType(\"Total Cholesterol High Range (mmol/L)\")\n",
     "mmol.definition_url = 'https://www.mayoclinic.org/tests-procedures/cholesterol-test/about/pac-20384601#high/mmol'\n",
     "i = XdIntervalType(\"TCHR (mmol/L)\", Decimal)\n",
     "i.interval_units = ('mmol/L','https://en.wikipedia.org/wiki/Molar_concentration#Units/mmol/L')\n",
-    "i.lower = 6.2\n",
+    "i.definition_url = 'https://www.mayoclinic.org/tests-procedures/cholesterol-test/interval'\n",
+    "\n",
+    "i.lower = '6.2'\n",
     "i.lower_included = False\n",
     "i.upper_unbounded = True\n",
     "i.published = True\n",
@@ -217,11 +332,32 @@
     "mmol.published = True\n",
     "d.referenceranges = mmol\n",
     "\n",
+    "\n",
+    "\n",
+    "print(mmol)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XdQuantityType : Total Cholesterol, ID: cjnrywgrj0002pebidqqnq76o Published: True\n"
+     ]
+    }
+   ],
+   "source": [
     "mg = ReferenceRangeType(\"Total Cholesterol High Range (mg/dL)\")\n",
     "mg.definition_url = 'https://www.mayoclinic.org/tests-procedures/cholesterol-test/about/pac-20384601#high/mg'\n",
     "i = XdIntervalType(\"TCHR (mg/dL)\", Decimal)\n",
     "i.interval_units = ('mg/dL','https://en.wikipedia.org/wiki/Molar_concentration#Units/mg/dL')\n",
-    "i.lower = 240\n",
+    "i.definition_url = 'https://www.mayoclinic.org/tests-procedures/cholesterol-test/interval'\n",
+    "\n",
+    "i.lower = '240'\n",
     "i.lower_included = False\n",
     "i.upper_bounded = False\n",
     "i.published = True\n",
@@ -229,7 +365,7 @@
     "mg.published = True\n",
     "d.referenceranges = mg\n",
     "\n",
-    "\n",
+    "d.published = True\n",
     "print(d)"
    ]
   },
@@ -242,14 +378,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "d.published = True\n",
-    "print(d.getModel())"
+    "%%capture xsd\n",
+    "print(d.getModel())\n",
+    "with open('stub.xsd', 'w') as f:\n",
+    "    f.write(\"\"\"<?xml version='1.0' encoding='UTF-8'?>\n",
+    "<xs:schema xmlns:xs=\"http://www.w3.org/2001/XMLSchema\"\n",
+    "  xmlns:rdfs=\"http://www.w3.org/2000/01/rdf-schema#\"\n",
+    "  xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\"\n",
+    "  xmlns:vc=\"http://www.w3.org/2007/XMLSchema-versioning\" xmlns:s3m=\"https://www.s3model.com/ns/s3m/\"\n",
+    "  targetNamespace=\"https://www.s3model.com/ns/s3m/\">\n",
+    "  <xs:include schemaLocation=\"https://www.s3model.com/ns/s3m/s3model_3_1_0.xsd\"/>\n",
+    " \n",
+    "<xs:element name=\"root\"/>\n",
+    "\n",
+    "  \"\"\")\n",
+    "  \n",
+    "    f.write(xsd.stdout)\n",
+    "    f.write(\"</xs:schema>\")\n",
+    "    \n",
+    "del xsd"
    ]
   },
   {
@@ -261,14 +414,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
+    "%%capture xml\n",
     "d.value = 128.00\n",
-    "print(d.getXMLInstance(True))"
+    "print(d.getXMLInstance())\n",
+    "with open('stub.xml', 'w') as f:\n",
+    "    f.write(\"\"\"<?xml version='1.0' encoding='UTF-8'?>\n",
+    "<s3m:root xmlns:xs=\"http://www.w3.org/2001/XMLSchema\" \n",
+    "  xmlns:s3m=\"https://www.s3model.com/ns/s3m/\"\n",
+    "  targetNamespace=\"https://www.s3model.com/ns/s3m/\"\n",
+    "  xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"\n",
+    "  xsi:schemaLocation='https://www.s3model.com/ns/s3m/ stub.xsd'\n",
+    ">\n",
+    "\n",
+    "\"\"\")\n",
+    "  \n",
+    "    f.write(xml.stdout)\n",
+    "    f.write(\"</s3m:root>\")\n",
+    "    \n",
+    "del xml"
    ]
   }
  ],
