--- a/RM/3_1_0/notebooks/RefRange Examples.ipynb
+++ b/RM/3_1_0/notebooks/RefRange Examples.ipynb
@@ -443,9 +443,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:S3Model]",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "conda-env-S3Model-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
