Complete ReferenceRAngeType and XdIntervalType examples.

--- a/RM/3_1_0/notebooks/RefRange Examples.ipynb
+++ b/RM/3_1_0/notebooks/RefRange Examples.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {
     "scrolled": false,
     "slideshow": {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "metadata": {
     "scrolled": false,
     "slideshow": {
@@ -99,7 +99,7 @@
    "source": [
     "[Reference ranges](https://en.wikipedia.org/wiki/Reference_range) can be used with any Ordered type. \n",
     "\n",
-    "In this tutorial we will use a XdQuantity model instance to build a model for recording [Total cholesterol](https://en.wikipedia.org/wiki/Reference_ranges_for_blood_tests#Lipids). A real world example would build a Cluster for the entire Lipids table shown from the previous link. We also assume that this is part of a full electronic record and the person's date of birth (age) and sex (male/female) are recorded elsewhere. Normally the semantic definitions will be related directly to accepted clinical guidelines, not Wikipedia, etc. links.\n",
+    "In this tutorial we will use a XdQuantity model instance to build a model for recording [Total cholesterol](https://en.wikipedia.org/wiki/Reference_ranges_for_blood_tests#Lipids). A real world example would build a Cluster for the entire Lipids table shown from the previous link. We also assume that this is part of a full electronic record and the person's date of birth (age) and sex (male/female) are recorded elsewhere. Normally the semantic definitions will be related directly to accepted clinical guidelines, not Wikipedia, etc. links as we do here for simplicity.\n",
     "\n",
     "We need a units object to select either; mmol/L or mg/dL. \n",
     "\n",
@@ -108,14 +108,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XdStringType : Concentration Units, ID: cjnrywgra0000pebi3itzblrs Published: True\n"
+      "XdStringType : Concentration Units, ID: cjnvumdt60036wlbirzdo1847 Published: True\n"
      ]
     }
    ],
@@ -137,19 +137,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XdQuantityType : Total Cholesterol, ID: cjnrywgrj0002pebidqqnq76o Published: False\n"
+      "XdQuantityType : Total Cholesterol, ID: cjnvumdtf0038wlbikw8n99b3 Published: False\n"
      ]
     }
    ],
    "source": [
-    "# now the model\n",
+    "# Create the Quantity model\n",
     "d = XdQuantityType(\"Total Cholesterol\")\n",
     "d.docs = \"Record the concentration of cholesterol.\"\n",
     "d.definition_url = 'https://en.wikipedia.org/wiki/Cholesterol#Cholesterol_testing'\n",
@@ -164,15 +164,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XdIntervalType : TCDR (mmol/L), ID: cjnrywgrt0006pebi1xsr68ko Published: True\n",
-      "ReferenceRangeType : Total Cholesterol Desireable Range (mmol/L), ID: cjnrywgrt0004pebiyopp33t3 Published: True\n"
+      "XdIntervalType : TCDR (mmol/L), ID: cjnvumdts003cwlbig1ru2485 Published: True\n",
+      "ReferenceRangeType : Total Cholesterol Desireable Range (mmol/L), ID: cjnvumdts003awlbimh2ikoiy Published: True\n"
      ]
     }
    ],
@@ -192,25 +192,26 @@
     "i.upper_included = False\n",
     "i.lower_included = False\n",
     "i.published = True\n",
-    "print(i)\n",
     "\n",
     "mmol.interval = i\n",
     "mmol.published = True\n",
     "d.referenceranges = mmol\n",
     "\n",
-    "print(mmol)"
+    "print(i) # the XdIntervalType model\n",
+    "print(mmol) # the Reference range model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ReferenceRangeType : Total Cholesterol Desireable Range (mg/dL), ID: cjnrywgs60008pebisetm6ilw Published: True\n"
+      "XdIntervalType : TCDR (mg/dL), ID: cjnvumdu1003gwlbi3ashi1gt Published: True\n",
+      "ReferenceRangeType : Total Cholesterol Desireable Range (mg/dL), ID: cjnvumdu1003ewlbi6hyxwzra Published: True\n"
      ]
     }
    ],
@@ -231,20 +232,21 @@
     "mg.published = True\n",
     "d.referenceranges = mg\n",
     "\n",
-    "\n",
+    "print(i)\n",
     "print(mg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ReferenceRangeType : Total Cholesterol Borderline high Range (mmol/L), ID: cjnrywgsh000cpebijg0wsyse Published: True\n"
+      "XdIntervalType : TCBR (mmol/L), ID: cjnvumdua003kwlbilfq9klvx Published: True\n",
+      "ReferenceRangeType : Total Cholesterol Borderline high Range (mmol/L), ID: cjnvumdua003iwlbiuiou7a6u Published: True\n"
      ]
     }
    ],
@@ -266,20 +268,21 @@
     "d.referenceranges = mmol\n",
     "\n",
     "\n",
-    "\n",
+    "print(i)\n",
     "print(mmol)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ReferenceRangeType : Total Cholesterol Borderline high Range (mg/dL), ID: cjnrywgst000gpebi1dfptfk2 Published: True\n"
+      "XdIntervalType : TCBR (mg/dL), ID: cjnvumdun003owlbidgem74vi Published: True\n",
+      "ReferenceRangeType : Total Cholesterol Borderline high Range (mg/dL), ID: cjnvumdun003mwlbiq4lafhqo Published: True\n"
      ]
     }
    ],
@@ -299,20 +302,21 @@
     "mg.published = True\n",
     "d.referenceranges = mg\n",
     "\n",
-    "\n",
+    "print(i)\n",
     "print(mg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ReferenceRangeType : Total Cholesterol High Range (mmol/L), ID: cjnrywgt6000kpebiwm1l5uzv Published: True\n"
+      "XdIntervalType : TCHR (mmol/L), ID: cjnvumdv0003swlbi6fb0jlod Published: True\n",
+      "ReferenceRangeType : Total Cholesterol High Range (mmol/L), ID: cjnvumdv0003qwlbidvg8t4a8 Published: True\n"
      ]
     }
    ],
@@ -333,20 +337,22 @@
     "d.referenceranges = mmol\n",
     "\n",
     "\n",
-    "\n",
+    "print(i)\n",
     "print(mmol)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XdQuantityType : Total Cholesterol, ID: cjnrywgrj0002pebidqqnq76o Published: True\n"
+      "XdIntervalType : TCHR (mg/dL), ID: cjnvumdvc003wwlbifhe952o7 Published: True\n",
+      "ReferenceRangeType : Total Cholesterol High Range (mg/dL), ID: cjnvumdvc003uwlbiklwcg85k Published: True\n",
+      "XdQuantityType : Total Cholesterol, ID: cjnvumdtf0038wlbikw8n99b3 Published: True\n"
      ]
     }
    ],
@@ -365,6 +371,9 @@
     "mg.published = True\n",
     "d.referenceranges = mg\n",
     "\n",
+    "print(i)\n",
+    "print(mg)\n",
+    "\n",
     "d.published = True\n",
     "print(d)"
    ]
@@ -373,12 +382,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Examine the model."
+    "Examine the model. Here we write the model stub as a file named stub.xsd. First we write defaults to instantiate the namespaces needed then create a *root* element to use as a wrapper. This *root* element is not part of S3Model. It is only used here so that we can demonstrate validation of the generated stub.xml below. \n",
+    "\n",
+    "**Note** If you get an error saying that *xsd* hasn't been defined then just run the cell again. It seems to be a bug in the Jupyter notebook *%%capture* magic command."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 57,
    "metadata": {
     "scrolled": false
    },
@@ -409,12 +420,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Print an XML instance example."
+    "Write a XML instance example. Again, we wrap the stub XML in a *root* element with the namespace declarations and point to stud.xsd to use for validation.\n",
+    "\n",
+    "**Note** If you get an error saying that *xml* hasn't been defined then just run the cell again. It seems to be a bug in the Jupyter notebook *%%capture* magic command."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 58,
    "metadata": {
     "scrolled": true
    },
@@ -439,6 +452,20 @@
     "    \n",
     "del xml"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are now two files; stub.xsd and stub.xml, in your notebooks directory. You can use any XML validation tool on stub.xml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
